# istioswitch

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  release.yml  security.yml
src/istioswitch/: cli.py  config.py  detector.py  installer.py  platform_utils.py  switcher.py
tests/: conftest.py  test_cli.py  test_config.py  test_detector.py  test_installer.py  test_platform.py  test_switcher.py
